tests/expectations/compiler/function/self_fail.out
Error [EPAR0370047]: Unsupported special access
    --> compiler-test:3:16
     |
   3 |         return self.foo == addr;
     |                ^^^^^^^^
